# InsightsDSA

./: .env  .gitattributes  .gitignore  aiBotBackend.py  analystBot.py  app.py  db.py  logic.md  prod.md  pyproject.toml  readme.md  req.txt  securityIssues.md  test_change_pwd.py  update-insights-dsa.sh  worker.py  wsgi.py
ansible/: ansible.cfg  requirements.yml  site.yml
ansible/group_vars/: all.yml
ansible/inventory/: dev.yml  production.yml
e2e/: conftest.py  test_ui_pages.py
frontend/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
frontend/src/: index.html  styles.css
frontend/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.guard.ts
src/insightsdsa/: __init__.py  ai_bot_backend.py  analyst_bot.py  app.py  appinit.py  config.py  constants.py  curriculum_sql.py  dashboard_data.py  db.py  init_db.py  models.py  retention_data.py  seed_e2e_user.py  sm2.py  worker.py
src/insightsdsa.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/insightsdsa/static/: dashboard.js  index.js  (+5 more)
static/: ai_core.js  dashboard.css  dashboard.js  index.js  landing.css  questions.js  workspace.js
templates/: aboutus.html  ai_modal.html  dashboard.html  insights.html  journey.html  landing.html  profile.html  question.html  questions.html  regAndLogin.html  resource.html  retention.html  roadmap.html  test-insights.html
tests/: conftest.py  test_appinit_parsing.py  test_bootstrap_sqlite.py  test_db_sqlite.py  test_integration_flask.py  test_sm2.py  test_templates.py
(+94 files in other folders)
